tests/invalid_def_name/expected_diagnostics.txt
grammar.peg:1:1: error: Expected a definition name here.
 1 | ?
   | ~
